welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: not found: value <
	return (a >= 13 && < <= 19)  
                           ^